--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "format": "prettier --write \"src/**/*.ts\"",
-    "format:check": "prettier --check \"src/**/*.ts\""
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "prepare": "husky install"
   },
   "keywords": [
     "ai",
@@ -50,9 +51,14 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
     "jest": "^29.7.0",
+    "husky": "^9.0.0",
+    "lint-staged": "^15.0.0",
     "openai": "^4.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.0.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": "prettier --write"
   }
 }
