--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:load": "jest tests/load.test.ts",
+    "load-test": "ts-node scripts/load-test.ts",
+    "load-test:quick": "ts-node scripts/load-test.ts --quick",
+    "load-test:stress": "ts-node scripts/load-test.ts --stress",
+    "load-test:custom": "ts-node scripts/load-test.ts --custom",
+    "load-test:endurance": "ts-node scripts/load-test.ts --endurance",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "prepare": "husky install"
@@ -56,6 +62,7 @@
     "openai": "^4.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
   },
   "lint-staged": {
