--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "load-test:stress": "ts-node scripts/load-test.ts --stress",
     "load-test:custom": "ts-node scripts/load-test.ts --custom",
     "load-test:endurance": "ts-node scripts/load-test.ts --endurance",
+    "release-notes": "node scripts/generate-release-notes.js",
+    "release-notes:version": "node scripts/generate-release-notes.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "prepare": "husky install"
