--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "costlens",
   "version": "1.2.0",
-  "description": "Smart AI cost optimization with multi-provider routing, model enforcement, and quality validation. Automatically routes requests across providers while maintaining quality and preventing downgrades.",
+  "description": "Smart AI cost optimization with OpenAI and Anthropic support. Automatically routes expensive models to cheaper alternatives while maintaining quality and preventing downgrades.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,6 +11,9 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
+    "lint": "eslint . --ext .ts,.js",
+    "lint:fix": "eslint . --ext .ts,.js --fix",
+    "lint:check": "eslint . --ext .ts,.js --quiet",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:load": "jest tests/load.test.ts",
@@ -33,7 +36,6 @@
     "gpt",
     "monitoring",
     "developer-tools",
-    "multi-provider",
     "model-enforcement",
     "quality-validation",
     "routing-strategies",
@@ -56,16 +58,20 @@
   },
   "devDependencies": {
     "@anthropic-ai/sdk": "^0.20.0",
+    "@eslint/js": "^9.38.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.0.0",
-    "jest": "^29.7.0",
+    "eslint": "^9.38.0",
+    "eslint-config-prettier": "^10.1.8",
     "husky": "^9.0.0",
+    "jest": "^29.7.0",
     "lint-staged": "^15.0.0",
     "openai": "^4.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "typescript-eslint": "^8.46.2"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": "prettier --write"
