--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest",
     "lint": "eslint . --ext .ts,.js",
     "lint:fix": "eslint . --ext .ts,.js --fix",
-    "lint:check": "eslint . --ext .ts,.js --quiet",
+    "lint:check": "eslint . --ext .ts,.js --quiet --max-warnings 200",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:load": "jest tests/load.test.ts",
