fix: Use lint:check in GitHub Actions to allow warnings
- Change from 'npm run lint' to 'npm run lint:check'
- Allows up to 200 warnings (current: 129)
- Prevents CI failure on non-critical warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,5 @@ jobs:
       - name: Check formatting
         run: npm run format:check
       
-      - name: Full lint check (with warnings)
-        run: npm run lint
-        continue-on-error: true
+      - name: Lint check (allow warnings)
+        run: npm run lint:check
